examples/test/testpolicy4164.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4164
  namespace: namespace143
spec:
  podSelector:
    matchLabels:
      key39: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value47
          key43: value41
      podSelector:
        matchLabels:
          key49: value10
          key0: value49
          key22: value26
